--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div>
             <h2>Fullstack developmenr</h2>
             <ul> 
-              <li><a href="http://www.w3schools.com%22%3Ew3/ Schools</a></li>
+              <li><a href="http://www.w3schools.com%22%3Ew3/ Schools"></a></li>
               <li><a href="https://expressjs.com/">Nodejs Express</a></li>
               <li><a href="http://www.ncbi.nlm.nih.gov/pubmed">Angular</a></li>
             </ul>
@@ -43,8 +43,8 @@
             <div>
               <h2>Backend</h2>
               <ul> 
-                <li><a href="http://www.w3schools.com%22%3Ejavascript/</a></li>
-                <li><a href="http://www.php.net%22%3Enodejs/ Express</a></li>
+                <li><a href="http://www.w3schools.com%22%3Ejavascript/"></a></li>
+                <li><a href="http://www.php.net%22%3Enodejs/ Express"></a></li>
                 <li><a href="http://www.ncbi.nlm.nih.gov/pubmed">SQL/ NoSQL</a></li>
               </ul>
             </div> 
