--- a/Portfolio.html
+++ b/Portfolio.html
@@ -115,14 +115,14 @@ Set a matching height and width that looks good, and use the border-radius prope
 		<!-- Content of the body-->
 		<h2>Portfolio</h2>
         
-        <img src="https://0.academia-photos.com/2163914/698630/60849690/s200_thomas.fihla.jpeg" alt="Avatar" class="avatar">
-        <h2>Tommy V. Fihla</h2>
+        <img src="https://avatars.githubusercontent.com/u/100694189?v=4" alt="Avatar" class="avatar">
+        <h2>Steve S. Shongwe</h2>
         <h3>My Bio</h3>
         <p>Let me introduce myself....</p>
-       <p><strong>Motto:</strong></p> <blockquote> "Life is like pizza, it depends how you slice it"
+       <p><strong>Motto:</strong></p> <blockquote> "Life is like rice"
         </blockquote>
         <span>
-            <p>Hi I am a full stack developer currently enrolled in the Ayoba programme. I am currently doing the following modules</p>
+            <p>Hi I am a full stack developer currently enrolled in the Absa Full-Stack programme. I am currently doing the following modules</p>
         </span>
 		<div class="row">
 			<div class="column">
@@ -236,7 +236,7 @@ Set a matching height and width that looks good, and use the border-radius prope
 		</div>
 	</div>
 
-    <footer>Copyright &copy; TommyTV</footer>
+    <footer>Copyright &copy; Steve</footer>
 </body>
 
 </html>
